--- a/package.json
+++ b/package.json
@@ -50,7 +50,11 @@
     "testRegex": "tests/.*-test\\.(js|jsx)$"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.17.1",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2"
