--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cors": "^2.8.5",
     "express": "4.17.1",
     "express-session": "^1.17.1",
+    "express-ws": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react": "16.12.0",
