--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "passport-local": "^1.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "5.1.2"
+    "react-router-dom": "5.1.2",
+    "ws": "^7.2.5"
   },
   "scripts": {
     "build": "webpack --mode production",
